# npnet

./: .gitignore  Makefile  README.md  pyspark_word2vec  requirements.txt  setup.py
s/: Makefile  README.md  pyproject.toml  requirements-compile.txt  requirements-lint.txt  requirements.txt  setup.py
s/examples/: toxic_detection.py
s/src/sprite/: __init__.py  global_conf.py  module_utils.py
s/src/sprite/bricks/: conf.py  losses.py
s/src/sprite/bricks/models/bert/: bert.py  encoder.py
s/src/sprite/bricks/tokenizations/bert/: bpe.py
s/src/sprite/spelling_correction/: conf.py
s/src/sprite/spelling_correction/models/mlp/: bktree.cpp  counting_utils.cpp  rank_block.py  split_block.py
s/src/sprite/toxic_detection/: conf.py
s/src/sprite/toxic_detection/models/bert/: detection.py
s/src/sprite/utils/: trie.py
s/tests/test_bricks/: test_losses.py
s/tests/test_bricks/test_models/: test_bert.py
s/tests/test_bricks/test_tokenization/: test_bpe.py
s/tests/test_spelling_correction/test_mlp/: test_bktree.py  test_mlp_utils.py  test_rank_block.py  test_split_block.py  test_trainer.py
s/tests/test_toxic_detection/test_bert/: test_detection.py
s/tests/test_utils/: test.trie.py
src/npnet/: __init__.py  tensor.py
src/npnet/nn/: linear.py  module.py
src/npnet/optim/: base_optim.py
