[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"


[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.1"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# manylinux-x86_64-image = "manylinux2014"
archs = ["x86_64"]
skip = "pp*"
